tests/errors/syntax/expected_r_paren/no_r_paren_in_primary.c
// Expected ')'
void main()
{
	int b = 10 + (-1 + 3;
	printid(b);
}
